--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 body{
     color: rgb(23, 23, 84);
+    background-image: url(—Pngtree—four\ beautiful\ white\ and\ brown_16284351.png);
 }
 header{
     background-color: white;
