--- a/index.css
+++ b/index.css
@@ -4,6 +4,10 @@ body{
 }
 header{
     background-color: white;
+    text-align: center;
+    align-items: center;
+    display: flex;
+    font-size: 150;
 }
 section{
     color: black;
